style: fix tailwind resetting headings, remove extra space

--- a/loyalty-app/src/index.css
+++ b/loyalty-app/src/index.css
@@ -1,4 +1,18 @@
 @tailwind base;
+/** https://github.com/tailwindlabs/tailwindcss/issues/1460#issuecomment-601159223 */
+h1 {
+  @apply text-2xl;
+}
+h2 {
+  @apply text-xl;
+}
+h3 {
+  @apply text-lg;
+}
+a {
+  @apply text-blue-600 underline;
+}
+
 @tailwind components;
 @tailwind utilities;
 
